#276 Fix text selection when drag&drop events on Safari

--- a/server/http-dashboard/app/scenes/Products/components/Events/styles.less
+++ b/server/http-dashboard/app/scenes/Products/components/Events/styles.less
@@ -93,3 +93,12 @@
   vertical-align: middle;
   margin-left: 8px;
 }
+
+.product-events-list.no-mouse-selection, .product-events-item-drag-active * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
